--- a/RFLobbyModifier.csproj
+++ b/RFLobbyModifier.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{43FC4FAC-5DE7-4948-BAA3-0BAD523CD083}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RFServerMess</RootNamespace>
-    <AssemblyName>RFServerMess</AssemblyName>
+    <RootNamespace>RFLobbyModifier</RootNamespace>
+    <AssemblyName>RFLobbyModifier</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,22 +32,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Libraries\RocketMod\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\Libraries\RFRocketMod\Assembly-CSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="com.rlabrecque.steamworks.net, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\Libraries\RFRocketMod\com.rlabrecque.steamworks.net.dll</HintPath>
     </Reference>
     <Reference Include="Rocket.API, Version=4.9.3.4, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Libraries\RocketMod\Rocket.API.dll</HintPath>
+      <HintPath>..\..\..\Libraries\RFRocketMod\Rocket.API.dll</HintPath>
     </Reference>
     <Reference Include="Rocket.Core, Version=4.9.3.4, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Libraries\RocketMod\Rocket.Core.dll</HintPath>
+      <HintPath>..\..\..\Libraries\RFRocketMod\Rocket.Core.dll</HintPath>
     </Reference>
     <Reference Include="Rocket.Unturned, Version=4.9.3.13, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Libraries\RocketMod\Rocket.Unturned.dll</HintPath>
+      <HintPath>..\..\..\Libraries\RFRocketMod\Rocket.Unturned.dll</HintPath>
     </Reference>
     <Reference Include="SDG.NetTransport, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Libraries\RocketMod\SDG.NetTransport.dll</HintPath>
-    </Reference>
-    <Reference Include="Steamworks.NET, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Libraries\RocketMod\Steamworks.NET.dll</HintPath>
+      <HintPath>..\..\..\Libraries\RFRocketMod\SDG.NetTransport.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,22 +55,33 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Libraries\RocketMod\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\Libraries\RFRocketMod\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Libraries\RocketMod\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\..\..\Libraries\RFRocketMod\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEx, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\Libraries\RocketMod\UnityEx.dll</HintPath>
+      <HintPath>..\..\..\Libraries\RFRocketMod\UnityEx.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ApplyLobbyCommand.cs" />
     <Compile Include="Configuration.cs" />
-    <Compile Include="Models\CustomLinkModel.cs" />
+    <Compile Include="Models\ConfigAdvancedSetting.cs" />
+    <Compile Include="Models\ConfigCommonSetting.cs" />
+    <Compile Include="Models\ConfigEntrySingleBoolean.cs" />
+    <Compile Include="Models\ConfigEntrySingleByte.cs" />
+    <Compile Include="Models\ConfigEntrySingleString.cs" />
+    <Compile Include="Models\ConfigEntrySingleUInt.cs" />
+    <Compile Include="Models\ConfigEntryStringArray.cs" />
+    <Compile Include="Models\ConfigEntryStringArrayHideable.cs" />
+    <Compile Include="Models\ConfigEntryCustomLink.cs" />
+    <Compile Include="Models\CustomLink.cs" />
     <Compile Include="Models\GameTagsModel.cs" />
     <Compile Include="Models\ServerModel.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\LobbyUtil.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
